--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,19 @@
   text-align: center;
 }
 
+.App h2 {
+  font-size: 1.4rem;
+}
+
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 2rem;
   pointer-events: none;
+  margin-bottom: -0.4rem;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,13 +25,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
