--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+body {
+  overflow-y: hidden;
+}
+
+canvas {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100% - 700px);
+}
