Added wool and eggs to farm and enabled collecting of eggs and wool

--- a/src/components/dashboards/FarmerDashboard.css
+++ b/src/components/dashboards/FarmerDashboard.css
@@ -7,8 +7,12 @@
 
 .dashboard-heading {
     text-align: left;
-    padding: 20px;
+    padding: 20px 0 0 20px;
     margin: 0;
+}
+
+.dashboard-subheading {
+    font-weight: 400;
 }
 
 .item-heading {
