--- a/src/components/dashboards/MarketDashboard.css
+++ b/src/components/dashboards/MarketDashboard.css
@@ -3,7 +3,6 @@
     box-shadow: 0 5px 15px rgba(0,0,0,0.08);
     width: 90%;
     margin: 10px auto;
-    height: 400px;
 }
 
 .dashboard-subheading {
@@ -12,24 +11,39 @@
     margin: 0;
 }
 
+.sell-tab, .buy-tab {
+    background-color: #2196F3;
+    padding-bottom: 10px;
+}
+
+.sell-tab__heading, .buy-tab__heading {
+    color: #fff;
+    margin: 0;
+    padding: 20px 0 0 0;
+}
 
 .sell-items, .buy-items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;  
+    justify-content: flex-start;
+    width: 95%;
+    margin: 10px auto;  
 }
 
 .buy-item, .sell-item {
     width: 30%;
     height: 80px;
     margin: 5px;
-    background-color: #eee;
+    background-color: #2186F2;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+    color: #fff;
     border-radius: 10px;
 } 
 
 .buy-button, .sell-button {
-    background-color: #ffffff;
-    border: 2px solid #545454;
+    background-color: transparent;
+    border: 2px solid #fff;
+    color: #fff;
     font-size: 18px;
     width: 120px;
     margin-left: 0;
@@ -38,15 +52,27 @@
 }
 
 .sell-button:hover, .buy-button:hover {
-    color: #666;
-    border-color: #666;
+    color: #eee;
+    border-color: #eee;
     cursor: pointer;
 }
 
 .tab-label {
     background-color: #ffffff;
-    border: 2px solid #545454;
+    border: 2px solid #2196F3;
+    color: #2196F3;
+    border-bottom: none;
     font-size: 18px;
     width: 120px;
-    margin: 10px;
+    margin: 15px 10px 0 10px;
+}
+
+.buy-label__true {
+    background-color: #2196F3;
+    color: #fff;
+}
+
+.sell-label__false {
+    background-color: #2196F3;
+    color: #fff;
 }
