--- a/src/components/dashboards/FarmerDashboard.css
+++ b/src/components/dashboards/FarmerDashboard.css
@@ -1,8 +1,8 @@
 .FarmerDashboard {
     color: #666;
     box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-    width: 90%;
-    margin: 10px auto;
+    width: 50%;
+    margin: 10px;
 }
 
 .dashboard-heading {
