--- a/src/components/dashboards/FieldDashboard.css
+++ b/src/components/dashboards/FieldDashboard.css
@@ -1,3 +1,10 @@
+.FieldDashboard {
+    color: #666;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+    width: 50%;
+    margin: 10px;
+}
+
 .button {
     background-color: #ffffff;
     border: 2px solid #545454;
