--- a/src/components/dashboards/MarketDashboard.css
+++ b/src/components/dashboards/MarketDashboard.css
@@ -2,7 +2,7 @@
     color: #666;
     box-shadow: 0 5px 15px rgba(0,0,0,0.08);
     width: 90%;
-    margin: 10px auto;
+    margin: 10px;
 }
 
 .dashboard-subheading {
