--- a/src/components/dashboards/FarmerDashboard.css
+++ b/src/components/dashboards/FarmerDashboard.css
@@ -1,8 +1,10 @@
 .FarmerDashboard {
-    color: #666;
+    color: #fff;
     box-shadow: 0 5px 15px rgba(0,0,0,0.08);
     width: 50%;
     margin: 10px;
+    height: 400px;
+    background-color: #515467;
 }
 
 .dashboard-heading {
