--- a/src/components/dashboards/WeatherDashboard.css
+++ b/src/components/dashboards/WeatherDashboard.css
@@ -1,7 +1,11 @@
+h1 {
+    font-size: 20px;
+}
+
 .weatherDashboard {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    z-index: 1000;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow:  0 5px 15px rgba(0,0,0,0.08);
+    background-color: #515467;
+    color: #fff;
 }
