--- a/src/components/dashboards/FarmerDashboard.css
+++ b/src/components/dashboards/FarmerDashboard.css
@@ -2,6 +2,7 @@
     color: #fff;
     box-shadow: 0 5px 15px rgba(0,0,0,0.08);
     background-color: #515467;
+    border-radius: 10px;
 }
 
 .dashboard-heading {
