--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -43,5 +43,13 @@
 }
 
 .button-container {
-    margin-top: 50px;
+    margin-top: 30px;
+}
+
+.city-input {
+    margin-top: 20px;
+    border: #545454 2px solid;
+    padding: 10px;
+    font-size: 18px;
+    color: #545454;
 }
