Added a level system and rejigged harvesting crops

--- a/src/components/FarmManager.css
+++ b/src/components/FarmManager.css
@@ -6,14 +6,18 @@
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas: 
         "weather field market"
-        "farmer field market"   
-        "farmer field market";
+        "level field market"   
+        "farmer market";
     grid-column-gap: 10px;
     grid-row-gap: 10px;
 }
 
 .weather {
     grid-area: "weather"
+}
+
+.level {
+    grid-area: "level"
 }
 
 .field {
